--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -134,7 +134,7 @@
 		.search-icon {
 			position: absolute;
 			right: 0.625rem;
-			top: 0.75rem;
+			top: .8rem;
 			color: $oakland-green;
 			font-size: 1.0625rem;
 		}
